src/test/test-models/good/mcmc/hmc/common/gauss.stan
parameters {
  real x;
}

model {
  x ~ normal(0, 1);
}